# RP2040-GNUBoy

./: .gitignore  CLAUDE.md
src/: emu.c  main.c
sys/pico/: CMakeLists.txt  config.h  input.cpp  rp2040.c  video.cpp
